# msmrd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  setup.py
data/vmd/: readme.md
examples/: CTMSM.ipynb  dipole.ipynb  discretizeTrajectory.ipynb  gayBerne.ipynb  generateMSM.ipynb  generateRateDictionary.ipynb  odLangevin.ipynb  odLangevinMarkovSwitch.ipynb  patchyParticles.ipynb  patchyParticlesAngular.ipynb  patchyProteins.ipynb  patchyProteinsMarkovSwitch.ipynb  potentials.ipynb  readDimerData.ipynb  testMSMRDintegrator.ipynb  testReadH5.ipynb  testSimulation.ipynb  trajectory.ipynb
examples/benchmark/: generatePatchyDimerFPTsBenchmark.ipynb  patchyDimerFPTs.ipynb  plotPatchyDimerFPTs.ipynb  plotPatchyProteinFPTs.ipynb  plotPentamerFPTs.ipynb  plotTrimerFPTs.ipynb
examples/benchmark_plots/: generatePatchyDimerFPTsBenchmark.ipynb  plotPatchyDimerFPTs.ipynb  plotPatchyProteinFPTs.ipynb  plotPentamerFPTs.ipynb  readme.md
examples/models/: CTMSM.ipynb  MSM.ipynb  continuous-timeMSM.ipynb  dipole.ipynb  discrete-timeMSM.ipynb  evaluatePotentials.ipynb  gayBerne.ipynb  langevin.ipynb  langevinDimerWCA.ipynb  langevinLennardJones.ipynb  langevinWCA.ipynb  multiParticleMSMRD.ipynb  odLangevin.ipynb  odLangevinMarkovSwitch.ipynb  odLangevinSelective.ipynb  overdampedLangevin.ipynb  overdampedLangevinMarkovSwitch.ipynb  overdampedLangevinSelective.ipynb  patchyParticleSTMV.ipynb  patchyParticles.ipynb  patchyParticlesAngular.ipynb  patchyParticlesAngular2.ipynb  patchyParticlesMultimer.ipynb  patchyProteins.ipynb  patchyProteinsMarkovSwitch.ipynb  potentialDipole.ipynb  potentialGayBerne.ipynb  readme.md
examples/scripts_drafts/: discretizeTrajectory.ipynb  estimateDiffusionPentamer.ipynb  generateMSM.ipynb  multiParticleMSMRD.ipynb  readme.md
examples/tests/: MSMRD_FPT.ipynb  MSMRDintegrator.ipynb  classSimulation.ipynb  classTrajectory.ipynb  estimateDiffusion.ipynb  estimateRotationalDiffusion.ipynb  initialConditionPatchyParticle.ipynb  initialConditionPatchyProtein.ipynb  integratorMAPK.ipynb  plotEnergyTemperature.ipynb  readH5.ipynb  readme.md  rotationsArbitraryAxis.ipynb
include/: boundary.hpp  eventManager.hpp  integrator.h  integrator.hpp  msm.hpp  particle.h  particle.hpp  particleCompound.hpp  potentials.hpp  quaternion.h  quaternion.hpp  randomgen.hpp  simulation.h  simulation.hpp  spherePartition.hpp  tools.hpp  trajectory.hpp  vec3.hpp
include/boundaries/: boundary.hpp  box.hpp  noBoundary.hpp  sphere.hpp
include/discretizations/: halfSpherePartition.hpp  positionOrientationPartition.hpp  positionOrientvectorPartition.hpp  quaternionPartition.hpp  spherePartition.hpp
include/integrators/: integrator.hpp  integratorLangevin.hpp  integratorMAPK.hpp  integratorMoriZwanzig.hpp  langevin.hpp  msmrdIntegrator.hpp  msmrdIntegratorDiscrete.hpp  msmrdMAPKintegrator.hpp  msmrdMultiParticleIntegrator.hpp  msmrdPatchyProtein.hpp  odLangevin.hpp  odLangevinMarkovSwitch.hpp  overdampedLangevin.hpp  overdampedLangevinMarkovSwitch.hpp  overdampedLangevinSelective.hpp
include/markovModels/: continuousTimeMarkovModel.hpp  discreteTimeMarkovModel.hpp  markovModel.hpp  msmrdMarkovModel.hpp  msmrdMarkovModelDiscrete.hpp
include/potentials/: bistable.hpp  combinedPotentials.hpp  dipole.hpp  gaussians3D.hpp  gayBerne.hpp  harmonic.hpp  harmonicRepulsion.hpp  lennardJones.hpp  pairBistable.hpp  patchyParticle.hpp  patchyParticleAngular.hpp  patchyParticleAngular2.hpp  patchyParticleSTMV.hpp  patchyProtein.hpp  patchyProteinAngular.hpp  patchyProteinMAPK.hpp  patchyProteinMarkovSwitch.hpp  potential.hpp  potentials.hpp
include/trajectories/: patchyDimer.hpp  trajectory.hpp  trajectoryEnergyTemperature.hpp  trajectoryMoriZwanzig.hpp  trajectoryPosition.hpp  trajectoryPositionOrientation.hpp  trajectoryPositionVelocity.hpp
msmrd2/: __init__.py
msmrd2/analysis/: __init__.py  extractRates.py
msmrd2/tools/: __init__.py  analysis.py  msmTools.py  particleTools.py  quaternions.py  spherePartition.py  trajectoryTools.py
msmrd2/visualization/: export2visit.py  export2vmd.py
msmrd_py/visualization/: __init__.py
scripts/: MSMRDpatchyDimerFPTs.py  patchyDimerFPTs.py  readDimerData.ipynb  readme.md  simulationDimer.py  simulationTrimer.py
scripts/MAPK/: 01_benchmarkMAPK.py  02_discretizeMAPK.py  03_generateMSM_MAPK.py  MAPK_all_toActive.py
scripts/MoriZwanzig/: benchmarkComparison.py  benchmarkComparisonBistable.py  benchmarkComparisonConstrainedDimer.py  benchmarkComparisonDimer.py  benchmarkComparisonFree.py  benchmarkComparisonHarmonic.py  benchmarkData.py  benchmarkDataBistable.py  benchmarkDataConstrainedDimer.py  benchmarkDataDeterministicHarmonic.py  benchmarkDataDimer.py  benchmarkDataFree.py  benchmarkDataHarmonic.py  benchmarkDataMoriZwanzig.py  benchmarkDataPairBistable.py  benchmarkFPTcomparisonBistable.py  benchmarkFPTcomparisonConstrainedDimer.py  benchmarkFPTcomparisonDimer.py  benchmarkOneTrajectoryMoriZwanzig.py
scripts/patchyDimer/: 01_benchmarkPatchyDimer.py  02_discretizePatchyDimer.py  03_generateMSMpatchyDimer.py  MSMRDpatchyDimerFPTs_2bound.py  MSMRDpatchyDimerFPTs_2unbound.py  MSMRDpatchyDimerFPTs_bound2bound.py  discreteMSMRDpatchyDimerFPTs_2bound.py  discreteMSMRDpatchyDimerFPTs_2unbound.py  discreteMSMRDpatchyDimerFPTs_bound2bound.py  discretizePatchyDimer.py  generateMSMpatchyDimer.py  patchyDimerFPTs_2bound.py  patchyDimerFPTs_2unbound.py  patchyDimerFPTs_bound2bound.py  simulationDimer.py
scripts/patchyProtein/: 01_benchmarkPatchyProteinMS.py  02_discretizePatchyProtein.py  03_generateMSMpatchyProtein.py  MSMRDpatchyProteinFPTs_2bound.py  MSMRDpatchyProteinFPTs_2unbound.py  MSMRDpatchyProteinFPTs_bound2bound.py  (+8 more)
src/: binding.cpp  boundary.cpp  eventManager.cpp  integrator.cpp  msm.cpp  particle.cpp  particleCompound.cpp  potentials.cpp  randomgen.cpp  simulation.cpp  spherePartition.cpp  tools.cpp  trajectory.cpp
tests/cpp/: CMakeLists.txt  testBoundaries.cpp  testDiscretizations.cpp  testIntegrators.cpp  testMain.cpp  testMarkovModels.cpp  testPotentials.cpp  testTools.cpp  testTrajectories.cpp  testmain.cpp
(+94 files in other folders)
